--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:targetSdkVersion="18" />
 
     <application
+        android:uiOptions="splitActionBarWhenNarrow"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.zero1.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.example.zero1.AppActivity"
+            android:label="@string/app_name" > 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
