--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat" >
+
+        android:theme="@style/Theme.AppCompat.Light" >
+        <!--如何根据level选择主题？？-->
         <activity
             android:name="com.example.zero1.AppActivity"
             android:label="@string/app_name" > 
