--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity 
             android:name="com.example.zero1.CityChoose"
             android:exported="true"></activity>
+                <activity 
+            android:name="com.example.zero1.DateChoose"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
