--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,30 +7,37 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+    <uses-permission 
+        android:name="android.permission.INTERNET"></uses-permission>	
     <application
-        android:uiOptions="splitActionBarWhenNarrow"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/Theme.AppCompat.Light"
+        android:uiOptions="splitActionBarWhenNarrow" >
 
-        android:theme="@style/Theme.AppCompat.Light" >
-        <!--如何根据level选择主题？？-->
+        <!-- 如何根据level选择主题？？ -->
         <activity
             android:name="com.example.zero1.AppActivity"
-            android:label="@string/app_name" > 
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
+        <activity
             android:name="com.example.zero1.CityChoose"
-            android:exported="true"></activity>
-                <activity 
+            android:exported="true" >
+        </activity>
+        <activity
             android:name="com.example.zero1.DateChoose"
-            android:exported="true"></activity>
+            android:exported="true" >
+        </activity>
+        <activity
+            android:name="com.example.zero1.InitActivityMainActivity"
+            android:label="@string/title_activity_init_activity_main" >
+        </activity>
     </application>
 
 </manifest>
