--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-    <uses-permission 
-        android:name="android.permission.INTERNET"></uses-permission>	
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -37,6 +39,10 @@
         <activity
             android:name="com.example.zero1.InitActivityMainActivity"
             android:label="@string/title_activity_init_activity_main" >
+        </activity>
+        <activity
+            android:name="com.example.zero1.TrainsInfoActivity"
+            android:label="@string/title_activity_trains_info" >
         </activity>
     </application>
 
