--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,12 +20,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light"
-        android:uiOptions="splitActionBarWhenNarrow" >
+         >
 
         <!-- 如何根据level选择主题？？ -->
         <activity
             android:name="com.example.zero1.AppActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
