登陆后动作

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:name="com.example.zero1.LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
+        <activity
+            android:name="com.example.zero1.ProfileActivity"
+            android:label="@string/title_activity_profile" >
+        </activity>
     </application>
 
 </manifest>
