--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../adt4_4_2/20131030/sdk/extras/android/support/v7/appcompat
+android.library.reference.1=../android-support-v7-appcompat
